# limelight

./: .gitignore  SPEC.md  package.json  pnpm-lock.yaml
src/: App.tsx  api.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: db.rs  lib.rs  main.rs  models.rs  scanner.rs  tagger.rs
src/components/: FolderManager.tsx  ImageCard.tsx  ImageViewer.tsx  SettingsPanel.tsx  Sidebar.tsx
